# minutes-generator

./: .env-sample  .gitignore  README.md  pyproject.toml  system_prompt.md
minutes_generator/: cli.py  config.py
